# Intra-school-competition

./: 技术报告链接.txt
starsky_sunshine_challenge/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
starsky_sunshine_challenge/config/: params.yaml
starsky_sunshine_challenge/launch/: vision.launch.py
starsky_sunshine_challenge/results/armor_red_1/: MyTeam_results0.json  MyTeam_results0.json.sha256
starsky_sunshine_challenge/results/rect/: MyTeam_results0.json  MyTeam_results0.json.sha256
starsky_sunshine_challenge/results/sphere/: MyTeam_results0.json  MyTeam_results0.json.sha256
starsky_sunshine_challenge/src/: advanced_processor.cpp  advanced_processor.hpp  my_vision_node.cpp
starsky_sunshine_challenge/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
starsky_sunshine_challenge/src/log/: latest_build
正式比赛/: CMakeLists.txt  技术报告.txt
正式比赛/results/圆环/: TEAM12_results1.json  TEAM12_results1.json.sha256
正式比赛/results/第三四阶段/: TEAM12_results3.json  TEAM12_results3.json.sha256  TEAM12_results4.json  TEAM12_results4.json.sha256
正式比赛/results/箭头/: TEAM12_results2.json  TEAM12_results2.json.sha256
正式比赛/src/: stage1-2.cpp  stage3-4.cpp
